Fix spacing and remove scroll

--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@
 
 .headshot {
   width: 100%;
-  height: 40%;
+  /* height: 200px; */
   margin: 0;
   border-radius: 0.8em 0.8em 0 0;
 }
@@ -61,17 +61,19 @@ button {
 
 .about-interests-container {
   width: 75%;
-  margin: 2.4em;
+  margin: 1.8em 0 2em 0;
 }
 
 .about__section-title,
 .interests__section-title {
   color: #f5f5f5;
   margin: 0;
+  font-size: 1.3em;
   margin-bottom: 0.3em;
 }
 
-.paragraph {
+.paragraph,
+.interests__paragraph {
   color: #dcdcdc;
   font-size: 0.7em;
   margin: 0;
@@ -79,8 +81,19 @@ button {
   line-height: 1.5em;
 }
 
+.interests__paragraph {
+  margin: 0;
+}
+
 .footer {
   background-color: #161619;
   width: 100%;
   padding: 1em 0;
+}
+
+.icons-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 25px;
 }
